--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "framer-motion": "^11.2.10",
-    "next": "14.2.4",
+    "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
@@ -23,7 +24,7 @@
     "@types/tailwindcss": "^3",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "14.2.28",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
